# ube

./: .gitignore  CMakeLists.txt  COPYING.txt  ChangeLog  INSTALL  LAYOUT.txt  Makefile.am  README.textile  README.txt  RELEASES.txt  THANKS  aclocal.m4  cc_linux.sh  cc_w32.sh  cf.sh  config.h.in  configure.ac  index.html  win32.nsis
cmake/Modules/: FindPopt.cmake
data/: CMakeLists.txt  Makefile.am
data/applications/: Makefile.am  ube.desktop
data/fonts/: Makefile.am
data/images/: Makefile.am  bg.xcf  bg_puzzle_selection.xcf  disabled_redo.xcf  move_0.xcf  move_1.xcf  move_2.xcf  path_0.xcf  path_2.xcf  redo.xcf  undo.xcf  undo_back.xcf  undo_disabled.xcf
data/images/bmp/: Makefile.am
data/images/png/: Makefile.am
data/images/xcf/: banned_cell.xcf  banned_cell_bak.xcf  banned_cell_modern.xcf  cell_0.xcf  cell_1.xcf  cell_2.xcf  cell_3.xcf  move_0.xcf  move_0_grayed.xcf  move_1.xcf  move_1_grayed.xcf  move_2.xcf  msg_box.xcf  overlay_move_0.xcf  overlay_move_1.xcf  overlay_move_2.xcf  path_0.xcf  path_1.xcf  path_2.xcf  player.xcf
data/lua/: Makefile.am
data/lua/puzzles/: Makefile.am  begin0.lua  puzzle1.lua  puzzle2.lua  puzzle3.lua  template.lua  tutorial0.lua  tutorial0a.lua  (+7 more)
data/ogg/: Makefile.am
data/pixmaps/: Makefile.am  ube16x16.xpm  ube32x32.xpm
doc/muse/: archi.muse  spec.muse
lib/: .gitignore
m4/: .gitignore  ax_lua.m4  gnulib-cache.m4
org/: bugs.org  diary.org  msg.org  todo.org  x-compiling.org
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  fr.po  ube.pot
scripts/: analyse-git-logs.rb  cc_dist.sh  cc_distcheck.sh  cc_linux.sh  cc_w32.sh  convert_images.rb  git-end-release.sh  git-merge-feature.sh  git-start-feature.sh  git-start-release.sh  prepare_move_images.rb  rename_class.rb  ube.el  w32.nsis
src/: CMakeLists.txt  Makefile.am  config.h.cmake
src/client/: CMakeLists.txt  Makefile.am  Makefile.am.orig  abstract_clock.hpp  abstract_controller.hpp  abstract_file_checker.hpp  abstract_game_mode.hpp  abstract_observer.hpp  abstract_view.hpp  abtract_in_game_renderer.hpp  chapter.cpp  chapter.hpp  chapter_selection_geometry.cpp  chapter_selection_geometry.hpp  chapter_selection_mode.cpp  chapter_selection_mode.hpp  chapter_selection_mode_factory.cpp  chapter_selection_mode_factory.hpp  chapter_selection_model.cpp  chapter_selection_model.hpp  chapter_selection_view.cpp  chapter_selection_view.hpp  clock_interface.hpp  command_factory_interface.hpp  controller_interface.hpp  game_event.hpp  game_loop.cpp  game_loop.hpp  game_mode.cpp  game_mode.hpp  game_mode_interface.hpp  hpp_observable.hpp  in_game_command_factory.cpp  in_game_command_factory.hpp  in_game_command_stack.cpp  in_game_command_stack.hpp  in_game_mode.cpp  in_game_mode.hpp  in_game_mode_factory.cpp  in_game_mode_factory.hpp  (+59 more)
src/client/tests/: client_tests.cpp  game_loop_test.cpp  game_mode_test.cpp  in_game_command_stack_test.cpp  in_game_model_loader_test.cpp  in_game_model_test.cpp  in_game_renderer_geometry_test.cpp  in_game_view_test.cpp  mock_clock.hpp  mock_command_factory.hpp  mock_controller.hpp  mock_file_checker.hpp  mock_game_mode.hpp  mock_in_game_renderer.hpp  mock_observer.hpp  mock_puzzle_selection_renderer.hpp  mock_selection_renderer.hpp  mock_view.hpp  observable_test.cpp  option_parser_test.cpp  puzzle_selection_model_test.cpp  puzzle_selection_view_test.cpp  resource_resolver_test.cpp  sdl_in_game_renderer_test.cpp  stat_file_checker_test.cpp
src/client/tests/lua/model_loader_test/: puzzle_with_messages.lua
src/common/: CMakeLists.txt  Makefile.am  abstract_resource_resolver.hpp  cout_logger.hpp  file_checker_interface.hpp  i18n.hpp  log_level.hpp  logger_interface.hpp  logging.cpp  logging.hpp  lua_helper.hpp  prefix_resource_resolver.cpp  prefix_resource_resolver.hpp  resource_resolver.cpp  resource_resolver.hpp  resource_resolver_interface.hpp  silent_logger.hpp  silent_ostream.hpp  stat_file_checker.cpp  stat_file_checker.hpp
src/common/tests/: common_tests.cpp  mock_file_checker.hpp  mock_resource_resolver.hpp  prefix_resource_resolver_test.cpp  resource_resolver_test.cpp  stat_file_checker_test.cpp
src/engine/: CMakeLists.txt  Makefile.am  amplifier.hpp  cell.cpp  cell.hpp  cell_factory.cpp  cell_factory.hpp  game_event.hpp  greeter.cpp  greeter.hpp  lua_command.cpp  lua_command.hpp  lua_helper.hpp  lua_path_finder.cpp  lua_path_finder.hpp  lua_puzzle.cpp  lua_puzzle.hpp  lua_puzzle_functions.hpp  lua_puzzle_loader.cpp  lua_puzzle_loader.hpp  lua_script_runner.cpp  lua_script_runner.hpp  lua_state_holder.cpp  lua_state_holder.hpp  move.cpp  move.hpp  path_finder_interface.hpp  puzzle.cpp  puzzle.hpp  puzzle_loader.cpp  puzzle_loader.hpp  resource_resolver.cpp  resource_resolver.hpp  script_runner_interface.hpp  stat_file_checker.cpp  stat_file_checker.hpp
src/engine/lua/: CMakeLists.txt  agenda.lua  archive.lua  i18n.lua  message_script.lua  move.lua  node.lua  path_finder_lib.lua  pdebug.lua  pick_move.lua  puzzle_lib.lua  queue.lua  script.lua  story_lib.lua
src/engine/lua/tests/: agenda_tests.lua  all_tests.sh  luaunit.lua  node_tests.lua  path_finder_tests.lua
src/engine/tests/: cell_factory_test.cpp  cell_test.cpp  greeter_test.cpp  lua_command_test.cpp  lua_path_finder_test.cpp  lua_puzzle_loader_test.cpp  lua_script_runner_test.cpp  mock_amplifier.hpp  mock_path_finder.hpp  mock_script_runner.hpp  puzzle_loader_test.cpp  puzzle_test.cpp  resource_resolver_test.cpp  script1.lua  stat_file_checker_test.cpp
src/engine/tests/lua/: lua_script_runner_test_story1.lua
src/engine/tests/lua/puzzle_loader_test/: puzzle1.lua  puzzle2.lua  puzzle_with_messages.lua  puzzle_with_numbered_cells.lua  puzzle_with_scripts.lua
src/lua/: CMakeLists.txt  Makefile.am
src/mvc/: CMakeLists.txt  Makefile.am  clock_interface.hpp  command_interface.hpp  command_stack.cpp  command_stack.hpp  controller_interface.hpp  observable.cpp  observable.hpp  observer_interface.hpp  view_interface.hpp
src/mvc/tests/: command_stack_test.cpp  mock_clock.hpp  mock_command.hpp  mock_controller.hpp  mock_observer.hpp  mock_view.hpp  observable_test.cpp
