imagesdir=${datadir}/@PACKAGE@/images

# Note : ideally, this list should be empty in the long term, 
# and every image should be loaded from png ... 
images_DATA=selected_cell.png
	move_0.png move_1.png move_2.png \
	overlay_move_0.png overlay_move_1.png overlay_move_2.png \
	undo.png redo.png disabled_undo.png disabled_redo.png \
	bg.png bg_puzzle_selection.png

SUBDIRS=png

EXTRA_DIST=${images_DATA}