imagesdir=${datadir}/@PACKAGE@/images

# Note : ideally, this list should be empty in the long term, 
# and every image should be loaded from png ... 
images_DATA=selected_cell.png \
	undo.png redo.png disabled_undo.png disabled_redo.png \
	bg.png bg_puzzle_selection.png

SUBDIRS=png

EXTRA_DIST=${images_DATA}