lib_LIBRARIES=liblua.a
liblua_a_SOURCES=lapi.c     lauxlib.h   lcode.h   ldebug.h  ldump.c  lgc.c    liolib.c  llimits.h   lmem.h     lobject.h   loslib.c   lstate.c   lstring.h  ltable.h   ltm.h   luaconf.h  lundump.c  lvm.h \
	lapi.h     lbaselib.c  ldblib.c  ldo.c     lfunc.c  lgc.h    llex.c    lmathlib.c  loadlib.c  lopcodes.c  lparser.c  lstate.h   lstrlib.c  ltablib.c  lua.c   lua.h      lundump.h  lzio.c  print.c \
	lauxlib.c  lcode.c     ldebug.c  ldo.h     lfunc.h  linit.c  llex.h    lmem.c      lobject.c  lopcodes.h  lparser.h  lstring.c  ltable.c   ltm.c      luac.c  lualib.h   lvm.c      lzio.h
