#TODO : is there a way to share this variable from top level Makefile.am ? 
imagesdir=${datadir}/@PACKAGE@/images

pngsdir=${imagesdir}/png

pngs_DATA=cell_0.png cell_1.png cell_2.png cell_3.png \
	path_0.png move_0.png move_0_grayed.png overlay_move_0.png \
	path_1.png move_1.png move_1_grayed.png overlay_move_1.png \
	player.png banned_cell.png

EXTRA_DIST=${pngs_DATA}
